==> jonpchin/arduino_projects/microcontrollers/PIC18LF2550/PIC18F2550.X/usart.c <==
#include "usart.h"
#include <pic18f2550.h>

/*****************************USART Initialization*******************************/
void USART_Init(long baud_rate)
{
    TRISCbits.TRISC6=0;                       /*Make Tx pin as output*/
    TRISCbits.TRISC7=1;                       /*Make Rx pin as input*/
    float temp =  (((float)(F_CPU)/(float)baud_rate)-1);
    SPBRG=(int)temp;                /*baud rate=9600, SPBRG = (F_CPU /(64*9600))-1*/
    TXSTA=0x20;                     /*Transmit Enable(TX) enable*/ 
    RCSTA=0x90;                     /*Receive Enable(RX) enable and serial port enable */
}
/******************TRANSMIT FUNCTION*****************************************/ 
void USART_TransmitChar(char out)
{        
        while(TXIF==0);            /*wait for transmit interrupt flag*/
        TXREG=out;                 /*wait for transmit interrupt flag to set which indicates TXREG is ready
                                    for another transmission*/    
}
/*******************RECEIVE FUNCTION*****************************************/
char USART_Receive()
{

    while(RCIF==0);                 /*wait for receive interrupt flag*/
    return(RCREG);                  /*receive data is stored in RCREG register and return to main program */
}

void USART_SendString(const char *out)
{
   while(*out!='\0')
   {            
        USART_TransmitChar(*out);
        out++;
   }
}
